# AGENTIC-AI-PROJECTS-01-05

./: .env  README.md  advanced_agent.py  main.py  pyvenv.cfg  requirements.txt
02 openrouter today/: main.py
04-helloagent/: requirement.txt
04-helloagent/04_hello_agent/hello_agent/: Global_level.py  main.py  openrouter_example.py  run_level.py
05 chainlit/: syeda_agent.py  translation_chat_history.json
UV/explore-uv/: pyproject.toml
UV/explore-uv/example-pkg/: pyproject.toml
